Updated to include all semester 2 modules

--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -28,10 +28,11 @@
           <a href="AppsPage.html">Applications</a>
             <ul>
               <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="MD.html">Random Meal Decider</a></li>
-              <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
               <li><a href="RC.html">Room Control Application</a></li>
+              <li><a href="MT.html">Collection of Smaller Applications</a></li>
+              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
+              <li><a href="AW.html">Android Weather Application</a></li>
             </ul>
         </li>
         <li>
@@ -52,6 +53,18 @@
 
     </div>
     <div class="mainTextAlt">
+      <devLog>
+        <span>
+          <img src="images/bba.png" width="375" height"210" frameborder="0"></br>
+        </span>
+        <span>
+          The Radiotherapy Assistant application has been mostly built, and is undergoing final modifications,
+          such as tweaks to the record system.
+          The Android Weather application is currently having the XML design finalized.
+          The My Tools application is currently undergoing testing.
+        </br><i>- 28/04/18</i>
+        </span>
+      </devLog>
       <devLog>
         <span>
           <img src="images/AppsDevLog.png" width="375" height"210" frameborder="0"></br>
