--- a/Website/RC.html
+++ b/Website/RC.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    <title>HMS Bennett - Primary School Numbers Game</title>
+    <title>HMS Bennett - Room Control Application</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
-    <script src="JavaScript/NGJava.js"></script>
+    <script src="JavaScript/Main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110520388-1"></script>
       <script>
@@ -16,10 +16,9 @@
   </head>
 
   <body onload="OnLoad()">
-    <bgsound id="sndPlayer"></bgsound>
     <h2 class="title">
       <img src="images/Website.png" width="20%" height"20%"></br>
-      Primary School Numbers Game
+      Room Control Application
     </h2>
     <h3>
       <ul class="menu">
@@ -55,28 +54,23 @@
     <div class="mainText">
       <left>
         <p>
-          Build Time : 50h</br>
-          Build Reason : University Foundation Project</br>
-          Start Date : October 2015</br>
-          Skills : HTML, Javascript</br>
+          Build Time : 75h</br>
+          Build Reason : University Second Year Project</br>
+          Start Date : November 2017</br>
+          Skills : Java</br>
         </br>
           <u>Description</u></br>
-          The Numbers Game is a simple HTML/Java application built to during my foundation year</br>
-          It exists to help teach children to recognise numbers in their word form.</br>
+          This app was developed as part of our Java unit, the application required us to build a library and link it with a GUI.
+          The application had to allow the user to add, modify, remove and simulate users. To save a log file, and store information in an XML document.
         </p>
       </left>
       <right>
-        <input id="btnStart" value="Start" type="button" onclick="Start()"/>
-        <p id="lblNum"> </p>
-        <input id="txtAns" type="text" /></br></br>
-        <input id="btnCheck" type="button" value="Check" onclick="CheckAnswer()"/></br></br>
-        <p id="lblReply"> </p></br>
-          <img id="smileOne" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileTwo" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileThree" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileFour" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileFive" src="images/Smiley1.png" height="75" width="75"/>
-      </right>
+        <p>
+          <a href="Files/RoomAccess-Build.zip" download><u>Download Room Access Zip</u></a></br></br>
+          App Screen Shot:</br>
+          <img src="images/JavaImage.png" width="100%" height"100%">
+        </p>
+       </right>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
