--- a/Website/AW.html
+++ b/Website/AW.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    <title>HMS Bennett - Primary School Numbers Game</title>
+    <title>HMS Bennett - Android Weather</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
-    <script src="JavaScript/NGJava.js"></script>
+    <script src="JavaScript/Main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110520388-1"></script>
       <script>
@@ -16,10 +16,9 @@
   </head>
 
   <body onload="OnLoad()">
-    <bgsound id="sndPlayer"></bgsound>
     <h2 class="title">
       <img src="images/Website.png" width="20%" height"20%"></br>
-      Primary School Numbers Game
+      Android Weather
     </h2>
     <h3>
       <ul class="menu">
@@ -55,28 +54,24 @@
     <div class="mainText">
       <left>
         <p>
-          Build Time : 50h</br>
-          Build Reason : University Foundation Project</br>
-          Start Date : October 2015</br>
-          Skills : HTML, Javascript</br>
+          Build Time : In Progress</br>
+          Build Reason : University Second Year Project</br>
+          Start Date : March 2018</br>
+          Skills : Android Studios, Java</br>
         </br>
           <u>Description</u></br>
-          The Numbers Game is a simple HTML/Java application built to during my foundation year</br>
-          It exists to help teach children to recognise numbers in their word form.</br>
+          This module was to teach us how to develop for mobile. To create a simple application that
+          tells you the current weather, as well as allow the user to place pins on a map with their
+          opinions of the weather, for example: "It says its sunny, but it is in fact cloudy".
         </p>
       </left>
       <right>
-        <input id="btnStart" value="Start" type="button" onclick="Start()"/>
-        <p id="lblNum"> </p>
-        <input id="txtAns" type="text" /></br></br>
-        <input id="btnCheck" type="button" value="Check" onclick="CheckAnswer()"/></br></br>
-        <p id="lblReply"> </p></br>
-          <img id="smileOne" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileTwo" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileThree" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileFour" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileFive" src="images/Smiley1.png" height="75" width="75"/>
-      </right>
+        <p>
+          <!-- <a href="Files/MD3.8.apk" download><u>Download APK File</u></a></br></br> -->
+          <!-- App Screen Shots:</br> -->
+          <!-- <img src="images/MD.gif" width="100%" height"100%"> -->
+        </p>
+       </right>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
