--- a/Website/AppsPage.html
+++ b/Website/AppsPage.html
@@ -27,10 +27,11 @@
           <a href="AppsPage.html">Applications</a>
             <ul>
               <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="MD.html">Random Meal Decider</a></li>
-              <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
               <li><a href="RC.html">Room Control Application</a></li>
+              <li><a href="MT.html">Collection of Smaller Applications</a></li>
+              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
+              <li><a href="AW.html">Android Weather Application</a></li>
             </ul>
         </li>
         <li>
@@ -52,19 +53,21 @@
     </div>
     <div class="mainText">
       <p>
-        I have made several applications. Some useful like a student loan calculator. Others more comical.</br>
+        I have made several applications. Such as a Radiotherapy Assistant and Student Loan Repayment Calculator.</br>
         </br>
         <left>
           <u>Downloadable</u></br></br>
           <a href="NG.html">Primary School Numbers Game</a></br></br>
-          <a href="MD.html">Girlfriend Meal Decider</a></br></br>
-          <a href="SLC.html">Student Loan Repayment Calculator.</a></br></br>
           <a href="USM.html">University Stage Management Application.</a></br></br>
           <a href="RC.html">Room Control Application.</a></br></br>
+          <a href="MT.html">My Tools.</a></br></br>
+          <a href="BBA.html">Radiotherapy Assistant.</a></br></br>
+          <a href="AW.html">Android Weather.</a></br></br>
         </left>
         <right>
           <u>Planned</u></br></br>
-          <a href="SLC.html">No Current Projects</a></br>
+          <!-- <a href="SLC.html">No Current Projects</a></br> -->
+          No Current Projects
         </right>
       </p>
     </div>
