--- a/Website/HR.html
+++ b/Website/HR.html
@@ -27,10 +27,11 @@
           <a href="AppsPage.html">Applications</a>
             <ul>
               <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="MD.html">Random Meal Decider</a></li>
-              <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
               <li><a href="RC.html">Room Control Application</a></li>
+              <li><a href="MT.html">Collection of Smaller Applications</a></li>
+              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
+              <li><a href="AW.html">Android Weather Application</a></li>
             </ul>
         </li>
         <li>
