--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -55,6 +55,16 @@
     <div class="mainTextAlt">
       <devLog>
         <span>
+          <img src="images/ic_logo_two.png" width="375" height"210" frameborder="0"></br>
+        </span>
+        <span>
+          The Radiotherapy Assistant application has been uploaded to the relevant page.
+          APK download for Android devices. Android Weather application has also been uploaded to its page.
+        </br><i>- 17/05/18</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
           <img src="images/bba.png" width="375" height"210" frameborder="0"></br>
         </span>
         <span>
