--- a/Website/BBA.html
+++ b/Website/BBA.html
@@ -63,12 +63,13 @@
           This module had us meet with live clients and build something to their specifications,
           my group was fortunate enought to recive this client, and create and application with a real world impact.
           A majority of this module was to teach us Agile methodology, and how to work in sprints and a group, following
-          a predetermined backlog.</br>
+          a predetermined backlog.</br></br>
+          This version is refined for a Samsung Galaxy S7 Edge, so there may be some scaling issues currently with other devices
         </p>
       </left>
       <right>
         <p>
-          <!-- <a href="Files/MD3.8.apk" download><u>Download APK File</u></a></br></br> -->
+          <a href="Files/Radiotherapy.apk" download><u>Download APK File</u></a></br></br>
           <!-- App Screen Shots:</br> -->
           <!-- <img src="images/MD.gif" width="100%" height"100%"> -->
         </p>
