Final Project Update and Implement

--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -43,6 +43,7 @@
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
               <li><a href="SA.html">Squire's Adventure</a></li>
+              <li><a href="FinalProject.html">Final Project</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -53,6 +54,16 @@
 
     </div>
     <div class="mainTextAlt">
+      <devLog>
+        <span>
+          <img src="images/ic_logo_two.png" width="375" height"210" frameborder="0"></br>
+        </span>
+        <span>
+          Both Android Application downloads are currently misfunctioning, I plan to fix this over the next academic year.</br>
+          Futhermore I have added a page for my Final Project, which I will create during my final semester from January to May 2019.
+        </br><i>- 31/08/18</i>
+        </span>
+      </devLog>
       <devLog>
         <span>
           <img src="images/ic_logo_two.png" width="375" height"210" frameborder="0"></br>
