--- a/Website/FinalProject.html
+++ b/Website/FinalProject.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>HMS Bennett - Student Loan Repayment Calculator</title>
+    <title>HMS Bennett - Final Project</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +18,7 @@
   <body onload="OnLoad()">
     <h2 class="title">
       <img src="images/Website.png" width="20%" height"20%"></br>
-      Student Loan Repayment Calculator
+      Final Project
     </h2>
     <h3>
       <ul class="menu">
@@ -55,21 +55,27 @@
     <div class="mainText">
       <left>
         <p>
-          Build Time : 5h</br>
-          Build Reason : Personal Use</br>
-          Start Date : February 2017</br>
-          Skills : Unity, C#</br>
+          Build Time : ---h</br>
+          Build Reason : University Third Year Project</br>
+          Start Date : Janurary 2019</br>
+          Skills : Unity, C#, VR, AI</br>
         </br>
           <u>Description</u></br>
-          This app was developed so you can figure out how much you shall have to repay based on how much you borrowed.</br>
-          It also has a feature that tells you how many years until the loan is paid off.
+            This project is currently in the planning stage, I plan to incorperate an AI and Virtual Reality</br>
+            I will be drawing ideas from Gorn, The Legend Of Zelda Skyward Sword and The Elder Scrolls: Skyrim.
         </p>
       </left>
       <right>
         <p>
-          <a href="Files/SLC1.1.apk" download><u>Download APK File</u></a></br></br>
-          Application Demo:</br>
-          <img src="images/SLC.gif" width="100%" height="100%" controls="show">
+          <img src="images/Gorn.jpg" width="100%" height"100%">
+          <img src="images/Moldarach-Medium.jpg" width="100%" height"100%">
+          <!-- Download Beta at:</br>
+          <iframe width="552" frameborder="0" height="167" src="https://itch.io/embed/190449"></iframe> -->
+        </br></br>
+          <!-- Trailer: Coming Soon</br> -->
+        </br></br>
+          <!-- Developers Walkthrough:</br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/hyd4AIRoCs8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
         </p>
        </right>
     </div>
