--- a/Website/Index.html
+++ b/Website/Index.html
@@ -43,6 +43,7 @@
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
               <li><a href="SA.html">Squire's Adventure</a></li>
+              <li><a href="FinalProject.html">Final Project</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -55,8 +56,8 @@
     <div class="mainText">
       <p>
         My name is Harrison Bennett.</br></br>
-        Currently seeking industrial placement 2018/2019 in the Surrey/Hampshire area.</br></br></br>
-        I am a 21 year old Computing and Games Development student at The University Of Plymouth.</br>
+        I am a 22 year old Computing and Games Development student at The University Of Plymouth. Currently on my third and final year</br>
+        I enjoy lots of differnt games, however The Legend Of Zelda is my favourite series.</br>
         I enjoy archery, and have been a member of Plymouth Archery Society since September 2015.</br>
         I am fascinated by Greek Mythology so tend to base games on it.</br></br>
         Click on games tab to see what is currently in the works, or play a working game.</br></br>
