--- a/Website/SA.html
+++ b/Website/SA.html
@@ -42,6 +42,7 @@
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
               <li><a href="SA.html">Squire's Adventure</a></li>
+              <li><a href="FinalProject.html">Final Project</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -54,14 +55,14 @@
     <div class="mainText">
       <left>
         <p>
-          Build Time : In progress</br>
+          Build Time : 110h</br>
           Build Reason : University Second Year Project</br>
           Start Date : October 2017</br>
           Skills : 3DS Max, Unity, C#</br>
         </br>
           <u>Description</u></br>
           This game is being created as part of my second year at university.</br>
-          The aim of this module is to build a street scene to show off my 3D modelling skills.</br>
+          The aim of this module is to build a street scene to showcase my 3D modelling skills.</br>
           You are the squire of Sir Ridmark, and must carry out your duties in service to him.</br>
         </p>
       </left>
