--- a/Website/NG.html
+++ b/Website/NG.html
@@ -43,6 +43,7 @@
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
               <li><a href="SA.html">Squire's Adventure</a></li>
+              <li><a href="FinalProject.html">Final Project</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
