Set up for Tali's Textiles Done, also updated rest of minisite

--- a/FullBeans/Index.html
+++ b/FullBeans/Index.html
@@ -7,7 +7,7 @@
 
   <body onload="OnLoad()">
     <h2 class="title">
-      Full Beans<br><br>
+      <img src="images/BeansLogo.jpg"><br>
       <input type="button" onclick="openHome()" value="Home"></input>
       <input type="button" onclick="openProject()" value="Latest Project"></input>
       <input type="button" onclick="openTeam()" value="Team"></input>
@@ -34,7 +34,7 @@
         Our Team<br>
       </h2>
       <div class="left">
-        <img src="images/harri2.jpg"><br>
+        <img src="images/harri3.jpg"><br>
         <p class="personName">
           Harrison Bennett<br>
         </p>
@@ -42,15 +42,15 @@
         harrison.bennett@students.plymouth.ac.uk
       </div>
       <div class="middle">
-        <img src="images/george2.jpg"><br>
+        <img src="images/george3.jpg"><br>
         <p class="personName">
-          George Plunkett-Smith<br>
+          The Dead Bean<br>
         </p>
         Project Lead<br>
         george.plunkett-smith@students.plymouth.ac.uk
       </div>
       <div class="right">
-        <img src="images/ross2.jpg"><br>
+        <img src="images/ross3.jpg"><br>
         <p class="personName">
           Ross Goold<br>
         </p>
@@ -65,13 +65,13 @@
       </h2>
       <div class="left">
         <p class="personName">
-          The Inescapable Effects of Menus in Virtual Reality<br>
+          The Inescapable Effects of Menus in Virtual Reality<br><br>
         </p>
         Implementation of Menus within Virtual Reality<br>
       </div>
       <div class="middle">
         <p class="personName">
-          A Thumbs Up To Virtual Reality<br>
+          A Thumbs Up To Virtual Reality<br><br>
         </p>
         Exploring different controls for hand movements and gestures in VR<br>
       </div>
