--- a/Website/SF.html
+++ b/Website/SF.html
@@ -32,6 +32,7 @@
               <li><a href="MT.html">Collection of Smaller Applications</a></li>
               <li><a href="BBA.html">Radiotherapy Assistant</a></li>
               <li><a href="AW.html">Android Weather Application</a></li>
+              <li><a href="TT.html">Tali's Textiles</a></li>
             </ul>
         </li>
         <li>
@@ -41,7 +42,7 @@
               <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
-              <li><a href="SA.html">Squire's Adventure</a></li>
+              <li><a href="FB.html">Full Beans</a></li>
               <li><a href="FinalProject.html">Final Project</a></li>
             </ul>
         </li>
@@ -68,10 +69,10 @@
       <right>
         <p>
         Download Alpha or Beta at:</br>
-        <iframe width="552" frameborder="0" height="167" src="https://itch.io/embed/142648"></iframe>
+        <iframe frameborder="0" src="https://itch.io/embed/142648?bg_color=101010&amp;fg_color=ffffff&amp;link_color=ae7c2c&amp;border_color=3f3f3f" width="552" height="167"></iframe>
       </br></br>
           Trailer:</br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/kTwvlA5ARfM" frameborder="0" allowfullscreen></iframe></br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/kTwvlA5ARfM" frameborder="0" allowfullscreen=""></iframe>
         </p>
        </right>
     </div>
