--- a/Website/TT.html
+++ b/Website/TT.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    <title>HMS Bennett - Primary School Numbers Game</title>
+    <title>HMS Bennett - Tali's Textiles</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
-    <script src="JavaScript/NGJava.js"></script>
+    <script src="JavaScript/Main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110520388-1"></script>
       <script>
@@ -16,10 +16,9 @@
   </head>
 
   <body onload="OnLoad()">
-    <bgsound id="sndPlayer"></bgsound>
     <h2 class="title">
       <img src="images/Website.png" width="20%" height"20%"></br>
-      Primary School Numbers Game
+      Tali's Textiles
     </h2>
     <h3>
       <ul class="menu">
@@ -57,28 +56,21 @@
     <div class="mainText">
       <left>
         <p>
-          Build Time : 50h</br>
-          Build Reason : University Foundation Project</br>
-          Start Date : October 2015</br>
-          Skills : HTML, Javascript</br>
+          Build Time : ---h</br>
+          Build Reason : University Third Year Project</br>
+          Start Date : November 2018</br>
+          Skills : Atom, HTML, Javascript, CSS</br>
         </br>
           <u>Description</u></br>
-          The Numbers Game is a simple HTML/Java application built to during my foundation year</br>
-          It exists to help teach children to recognise numbers in their word form.</br>
+          This project is part of our web scripting module, and we have been tasked with proposing our own project.<br>
+          Due to this I have decided to build a purchasing website. Specifically allowing the user to purchase textiles (themed on Mass Effect).
         </p>
       </left>
       <right>
-        <input id="btnStart" value="Start" type="button" onclick="Start()"/>
-        <p id="lblNum"> </p>
-        <input id="txtAns" type="text" /></br></br>
-        <input id="btnCheck" type="button" value="Check" onclick="CheckAnswer()"/></br></br>
-        <p id="lblReply"> </p></br>
-          <img id="smileOne" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileTwo" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileThree" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileFour" src="images/Smiley1.png" height="75" width="75"/>
-          <img id="smileFive" src="images/Smiley1.png" height="75" width="75"/>
-      </right>
+        <p>
+          <a href="Tali/TaliHome.html"><u>Access Tali's Textiles Page Here</u></a>
+        </p>
+       </right>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
