--- a/Website/SLC.html
+++ b/Website/SLC.html
@@ -32,6 +32,7 @@
               <li><a href="MT.html">Collection of Smaller Applications</a></li>
               <li><a href="BBA.html">Radiotherapy Assistant</a></li>
               <li><a href="AW.html">Android Weather Application</a></li>
+              <li><a href="TT.html">Tali's Textiles</a></li>
             </ul>
         </li>
         <li>
@@ -41,7 +42,7 @@
               <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
-              <li><a href="SA.html">Squire's Adventure</a></li>
+              <li><a href="FB.html">Full Beans</a></li>
               <li><a href="FinalProject.html">Final Project</a></li>
             </ul>
         </li>
