--- a/FullBeans/Index.html
+++ b/FullBeans/Index.html
@@ -16,19 +16,22 @@
     <div class="anchorPoint" id="HomeAnchor"></div>
     <div class="negativeSpace"></div>
     <div class="anchorPoint" id="ProjectAnchor"></div>
-    <div class="areaSplit">
+    <div class="areaSplitHome">
       <h2>
         Home<br>
       </h2>
       <!-- Add image -->
     </div>
-    <div class="anchorPoint" id="TeamAnchor"></div>
-    <div class="areaSplit">
+    <div class="areaSplitVideo">
       <h2>
         VR SpellCaster<br>
       </h2>
       <!-- Stuff -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/d550iQrihGg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/qF0qGkrLHco" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
     </div>
+    <div class="teamAnchorPoint" id="TeamAnchor"></div>
     <div class="areaSplitTeam">
       <h2>
         Our Team<br>
@@ -44,13 +47,13 @@
       <div class="middle">
         <img src="images/george3.jpg"><br>
         <p class="personName">
-          The Dead Bean<br>
+          George Plunkett-Smith<br>
         </p>
         Project Lead<br>
         george.plunkett-smith@students.plymouth.ac.uk
       </div>
       <div class="right">
-        <img src="images/ross3.jpg"><br>
+        <img src="images/ross2.jpg"><br>
         <p class="personName">
           Ross Goold<br>
         </p>
