--- a/HMS Bennett/AppsPage.html
+++ b/HMS Bennett/AppsPage.html
@@ -68,8 +68,7 @@
         </left>
         <right>
           <u>Planned</u></br></br>
-          <!-- <a href="SLC.html">No Current Projects</a></br> -->
-          No Current Projects
+          <a href="TT.html">Tali's Textiles</a></br>
         </right>
       </p>
     </div>
