--- a/HMS Bennett/DevLog.html
+++ b/HMS Bennett/DevLog.html
@@ -56,9 +56,11 @@
     </div>
     <div class="mainTextAlt">
       <devLog>
-        <span>
-          <img src="images/ic_logo_two.png" width="375" height"210" frameborder="0"></br>
+        <p class="padding"></p>
+        <span class="centerImage">
+          <img src="images/ic_logo_two.png" width="210" height"210" frameborder="0"></br>
         </span>
+        <p class="padding"></p>
         <span>
           Both Android Application downloads are currently misfunctioning, I plan to fix this over the next academic year.</br>
           Futhermore I have added a page for my Final Project, which I will create during my final semester from January to May 2019.
@@ -66,9 +68,11 @@
         </span>
       </devLog>
       <devLog>
+        <p class="padding"></p>
         <span>
-          <img src="images/ic_logo_two.png" width="375" height"210" frameborder="0"></br>
+          <img src="images/ic_logo_two.png" width="210" height"210" frameborder="0"></br>
         </span>
+        <p class="padding"></p>
         <span>
           The Radiotherapy Assistant application has been uploaded to the relevant page.
           APK download for Android devices. Android Weather application has also been uploaded to its page.
@@ -99,7 +103,7 @@
       </devLog>
       <devLog>
         <span>
-          <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
+          <iframe frameborder="0" src="https://itch.io/embed/190449?bg_color=101010&amp;fg_color=FFFFFF&amp;link_color=ae7c2c&amp;border_color=3f3f3f" width="375" height="210"></iframe>
         </span>
         <span>
           Beta released for Hover Racer previously bug has been squashed. Gameplay has been refined to be more entertaining.
@@ -129,7 +133,7 @@
       </devLog>
       <devLog>
         <span>
-          <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
+          <iframe frameborder="0" src="https://itch.io/embed/190449?bg_color=101010&amp;fg_color=FFFFFF&amp;link_color=ae7c2c&amp;border_color=3f3f3f" width="375" height="210"></iframe>
         </span>
         <span>
           Alpha released on Itch.io. Includes menu system, basic gameplay, track redesign, and soundtrack implementation. Beta should include
@@ -168,7 +172,7 @@
       </devLog>
       <devLog>
         <span>
-          <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
+          <iframe frameborder="0" src="https://itch.io/embed/190449?bg_color=101010&amp;fg_color=FFFFFF&amp;link_color=ae7c2c&amp;border_color=3f3f3f" width="375" height="210"></iframe>
         </span>
         <span>
           Hover Racer animations have been started, and the tutorial level has been finished.
@@ -178,7 +182,7 @@
       </devLog>
       <devLog>
         <span>
-          <iframe width="375" height='210' frameborder="0" src="https://itch.io/embed/190462"></iframe>
+          <iframe frameborder="0" src="https://itch.io/embed/190462?bg_color=101010&amp;fg_color=ffffff&amp;link_color=ae7c2c&amp;border_color=3f3f3f" width="375" height="210"></iframe>
         </span>
         <span>
           Hover Racer and Gods At War now have itch pages. Gods At War with a Alpha.
