--- a/HMS Bennett/GamePage.html
+++ b/HMS Bennett/GamePage.html
@@ -67,8 +67,9 @@
           <a href="HR.html">Hover Racer</a></br></br>
         </left>
         <right>
-          <u>Currently Unplayable</u></br></br>
-          <a href="SA.html">Squire's Adventure</a></br></br>
+          <u>In Progress</u></br></br>
+          <a href="FinalProject.html">Honour Project</a></br></br>
+          <a href="FB.html">Full Beans</a></br></br>
         </right>
       </p>
     </div>
