--- a/HMS Bennett/Tali/TaliCart.html
+++ b/HMS Bennett/Tali/TaliCart.html
@@ -11,5 +11,16 @@
     <h2>
       Tali's Textiles
     </h2>
+    <div class="cart">
+
+    </div>
+    <div>
+      <ul class="menu">
+        <li><a href="">New Releases</a></li>
+        <li><a href="">Home Two</a></li>
+        <li><a href="">Special Requests</a></li>
+      </ul>
+    </div>
+    Oga Booga
   </body>
 </html>
