CSS restyle for Tali's Textiles

--- a/HMS Bennett/Tali/TaliHome.html
+++ b/HMS Bennett/Tali/TaliHome.html
@@ -8,18 +8,40 @@
   </head>
 
   <body onload="OnLoad()">
-    <h1>
-      Tali's Textiles
-    </h1>
-    <div class="cart">
-      <a href="TailCart.html"><img src="images/cartIcon.png" width="7.5%" height="7.5%"></a>
-    </div>
-    <div>
-      <ul class="menu">
-        <li><a href="">New Releases</a></li>
-        <li><a href="">Home Two</a></li>
-        <li><a href="">Special Requests</a></li>
-      </ul>
-    </div>
+    <table style="width:100%">
+      <tr>
+        <th style="width:50%" class="titleName">
+          <h1>Tali's Textiles</h1>
+        </th>
+        <th style="width:50%" class="titleCart">
+          <a href="TaliCart.html"><img src="images/cartIcon.png" width="7.5%"></a>
+        </th>
+      </tr>
+      <tr class="menu">
+        <td><a href="TaliHome.html">New Releases</a></td>
+        <td><a href="TaliRequest">Request</a></td>
+        <td><a href="TaliLogin">Login</a></td>
+      </tr>
+    </table>
+    <table style="width:80%" class="content">
+      <td>
+        <a href="TaliItemNo001">
+          Tali Print Scarf<br><br>
+          <img src="images/TaliScarf.png" width="75%">
+        </a>
+      </td>
+      <td>
+        <a href="TaliItemNo002">
+          N7 Leather Jacket<br><br>
+          <img src="images/N7Jacket.png" width="75%">
+        </a>
+      </td>
+      <td>
+        <a href="TaliItemNo003">
+          Krogan T-shirt<br><br>
+          <img src="images/kroganTshirt.png" width="75%">
+        </a>
+      </td>
+    </table>
   </body>
 </html>
