--- a/FullBeans/Index.html
+++ b/FullBeans/Index.html
@@ -24,12 +24,12 @@
     </div>
     <div class="areaSplitVideo">
       <h2>
-        VR SpellCaster<br>
+        VR Spell Slinger<br>
       </h2>
       <!-- Stuff -->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/d550iQrihGg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br><br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/qF0qGkrLHco" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/d550iQrihGg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/qF0qGkrLHco" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/pb4K6IF95iE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div class="teamAnchorPoint" id="TeamAnchor"></div>
     <div class="areaSplitTeam">
