--- a/HMS Bennett/Tali/TaliRequest.html
+++ b/HMS Bennett/Tali/TaliRequest.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title id="pageTitle">Tali's Textiles - Home</title>
+    <title id="pageTitle">Tali's Textiles - Request</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
     <script src="Javascript/main.js"></script>
     <script type="text/JSON" src="Javascript/content.json"></script>
@@ -24,8 +24,8 @@
         <td><a href="TaliLogin.html">Login</a></td>
       </tr>
     </table>
-    <table class="contentMenu" id="menuContent">
+    <table style="width:80%" class="content">
+
     </table>
-    <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
   </body>
 </html>
