--- a/HMS Bennett/Tali/TaliBasket.html
+++ b/HMS Bennett/Tali/TaliBasket.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    <title id="titleData">Tali's Textiles - </title>
+    <title id="pageTitle">Tali's Textiles - Basket</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
-    <script src="Javascript/main.js" async></script>
+    <script src="Javascript/main.js"></script>
   </head>
 
   <body onload="OnLoad()">
@@ -23,37 +23,15 @@
         <!-- <td><a href="TaliLogin.html">Login</a></td> -->
       </tr>
     </table>
-    <div class="contentImage">
-      <p id="imageData"></p>
-    </div>
-    <table class="contentTitle">
-      <th id="nameData"></th>
-    </table>
-    <table class="contentDescription">
+    <table class="contentMenu" id="menuContent">
       <tr>
-        <td id="costData">£</td>
+        <td><p id="itemName"></p><p id="itemCost"></p><p id="itemInBasket"></p></td>
       </tr>
       <tr>
-        <td><br><br></td>
-      </tr>
-      <tr>
-        <td id="quantityData">Left In Stock: </td>
-      </tr>
-      <tr>
-        <td><br><br></td>
-      </tr>
-      <tr>
-        <td id="descriptionData"></td>
-      </tr>
-      <tr>
-        <td><br><br></td>
-      </tr>
-      <tr>
-        <td><button id="buttonBuy" onclick="AddToBasket()">Add To Basket</button></td>
+        <td></td>
+        <td><button id="buttonBuy">Checkout</button></td>
       </tr>
     </table>
-    <br><br><br><br><br><br><br><br><br><br><br>
     <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
-    <p id="pageTitle"></p>
   </body>
 </html>
