--- a/HMS Bennett/Tali/TaliHome.html
+++ b/HMS Bennett/Tali/TaliHome.html
@@ -4,8 +4,7 @@
   <head>
     <title id="pageTitle">Tali's Textiles - Home</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
-    <script src="Javascript/main.js"></script>
-    <script type="text/JSON" src="Javascript/content.json"></script>
+    <script src="Javascript/main.js" async></script>
   </head>
 
   <body onload="OnLoad()">
@@ -15,17 +14,18 @@
           <h1>Tali's Textiles</h1>
         </th>
         <th style="width:50%" class="titleCart">
-          <a href="TaliCart.html"><img src="images/cartIcon.png" width="7.5%"></a>
+          <a href="TaliBasket.html"><h1>Basket = Empty</h1></a>
         </th>
       </tr>
       <tr class="menu">
         <td><a href="TaliHome.html">New Releases</a></td>
         <td><a href="TaliRequest.html">Request</a></td>
-        <td><a href="TaliLogin.html">Login</a></td>
+        <!-- <td><a href="TaliLogin.html">Login</a></td> -->
       </tr>
     </table>
     <table class="contentMenu" id="menuContent">
     </table>
     <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
+    <p id="titleData" style="color:black"><p>
   </body>
 </html>
