--- a/HMS Bennett/Tali/TaliRequest.html
+++ b/HMS Bennett/Tali/TaliRequest.html
@@ -14,13 +14,12 @@
           <h1>Tali's Textiles</h1>
         </th>
         <th style="width:50%" class="titleCart">
-          <a href="TaliBasket.html"><h1>Basket = Empty</h1></a>
+          <a href="TaliBasket.html"><h1 id="basketCount">Basket: 0</h1></a>
         </th>
       </tr>
       <tr class="menu">
         <td><a href="TaliHome.html">New Releases</a></td>
         <td><a href="TaliRequest.html">Request</a></td>
-        <!-- <td><a href="TaliLogin.html">Login</a></td> -->
       </tr>
     </table>
     <table style="width:80%" class="content">
