--- a/HMS Bennett/Tali/TaliBasket.html
+++ b/HMS Bennett/Tali/TaliBasket.html
@@ -14,22 +14,25 @@
           <h1>Tali's Textiles</h1>
         </th>
         <th style="width:50%" class="titleCart">
-          <a href="TaliBasket.html"><h1>Basket = Empty</h1></a>
+          <a href="TaliBasket.html"><h1 id="basketCount" style="color:black">Basket: 0</h1></a>
         </th>
       </tr>
       <tr class="menu">
         <td><a href="TaliHome.html">New Releases</a></td>
         <td><a href="TaliRequest.html">Request</a></td>
-        <!-- <td><a href="TaliLogin.html">Login</a></td> -->
       </tr>
     </table>
-    <table class="contentMenu" id="menuContent">
-      <tr>
+    <table class="contentMenu" id="basketContent">
+      <!-- <tr>
         <td><p id="itemName"></p><p id="itemCost"></p><p id="itemInBasket"></p></td>
+      </tr> -->
+      <tr>
+        <td style="border:none"></td>
+        <td id="totalCost">Total: &pound0</td>
       </tr>
       <tr>
-        <td></td>
-        <td><button id="buttonBuy">Checkout</button></td>
+        <td style="border:none"></td>
+        <td><button id="buttonCheckout" onclick="Checkout()">Checkout</button></td>
       </tr>
     </table>
     <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
