--- a/HMS Bennett/Tali/TaliHome.html
+++ b/HMS Bennett/Tali/TaliHome.html
@@ -5,6 +5,8 @@
     <title id="pageTitle">Tali's Textiles - Home</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
     <script src="Javascript/main.js" async></script>
+  	<!-- <script src="Javascript/qunit-2.4.0.js"></script>
+  	<script src="Javascript/UnitTests.js" async></script> -->
   </head>
 
   <body onload="OnLoad()">
@@ -14,18 +16,20 @@
           <h1>Tali's Textiles</h1>
         </th>
         <th style="width:50%" class="titleCart">
-          <a href="TaliBasket.html"><h1>Basket = Empty</h1></a>
+          <a href="TaliBasket.html"><h1 id="basketCount">Basket: 0</h1></a>
         </th>
       </tr>
       <tr class="menu">
         <td><a href="TaliHome.html">New Releases</a></td>
         <td><a href="TaliRequest.html">Request</a></td>
-        <!-- <td><a href="TaliLogin.html">Login</a></td> -->
       </tr>
     </table>
     <table class="contentMenu" id="menuContent">
     </table>
     <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
     <p id="titleData" style="color:black"><p>
+
+    <!-- <div id="qunit"></div>
+    <div id="qunit-fixture"></div> -->
   </body>
 </html>
