Tali Update One

--- a/HMS Bennett/Tali/TaliHome.html
+++ b/HMS Bennett/Tali/TaliHome.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 
-<html>
+<html class="home">
   <head>
     <title id="pageTitle">Tali's Textiles - Home</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
-    <script src="Javascript/main.js" async></script>
+    <script src="Javascript/HomeCode.js" async></script>
   	<!-- <script src="Javascript/qunit-2.4.0.js"></script>
-  	<script src="Javascript/UnitTests.js" async></script> -->
+  	<script src="Javascript/UnitTestsHome.js" async></script> -->
   </head>
 
   <body onload="OnLoad()">
     <table style="width:100%">
       <tr>
-        <th style="width:50%" class="titleName">
+        <th class="titleName">
           <h1>Tali's Textiles</h1>
         </th>
-        <th style="width:50%" class="titleCart">
+        <th class="titleCart">
           <a href="TaliBasket.html"><h1 id="basketCount">Basket: 0</h1></a>
         </th>
       </tr>
@@ -26,8 +26,8 @@
     </table>
     <table class="contentMenu" id="menuContent">
     </table>
-    <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
-    <p id="titleData" style="color:black"><p>
+    <p id="titleData" style="opacity: 0"><p>
+    <p>DISCLAIMER: This is a university project, these products aren't actually available for sale.</p>
 
     <!-- <div id="qunit"></div>
     <div id="qunit-fixture"></div> -->
