--- a/HMS Bennett/Tali/TaliRequest.html
+++ b/HMS Bennett/Tali/TaliRequest.html
@@ -4,16 +4,16 @@
   <head>
     <title id="pageTitle">Tali's Textiles - Request</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
-    <script src="Javascript/main.js"></script>
+    <script src="Javascript/RequestCode.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <table style="width:100%">
       <tr>
-        <th style="width:50%" class="titleName">
+        <th class="titleName">
           <h1>Tali's Textiles</h1>
         </th>
-        <th style="width:50%" class="titleCart">
+        <th class="titleCart">
           <a href="TaliBasket.html"><h1 id="basketCount">Basket: 0</h1></a>
         </th>
       </tr>
@@ -30,11 +30,11 @@
         Email: <input type="email" id="requestEmail" placeholder="leeroyjenkins1@snailmail.com"></input><br>
         Description: <input type="textarea" id="requestNature" placeholder="Wooden M5 Phalanx pistol with green stripes"></input><br>
         URL Example: <input type="url" id="requestURL" placeholder="https://vignette.wikia.nocookie.net/masseffect/images/b/b4/M5_phalanx.jpg/revision/latest?cb=20110414183200"></input><br><br>
-        <button onclick="sendRequest()">Submit</button><br><br>
+        <button onclick="SendRequest()">Submit</button><br><br>
         Request will be met with an email discussion on monitary cost, time cost and <br>
         personalisation questions.
       </div>
     </table>
-    <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
+    <p class="disclaimer">DISCLAIMER: This is a university project, these products aren't actually available for sale.</p>
   </body>
 </html>
