--- a/HMS Bennett/Tali/TaliBasket.html
+++ b/HMS Bennett/Tali/TaliBasket.html
@@ -4,17 +4,17 @@
   <head>
     <title id="pageTitle">Tali's Textiles - Basket</title>
     <link rel="stylesheet" href="CSS/coursework.css"/>
-    <script src="Javascript/main.js"></script>
+    <script src="Javascript/BasketCode.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <table style="width:100%">
       <tr>
-        <th style="width:50%" class="titleName">
+        <th class="titleName">
           <h1>Tali's Textiles</h1>
         </th>
-        <th style="width:50%" class="titleCart">
-          <a href="TaliBasket.html"><h1 id="basketCount" style="color:black">Basket: 0</h1></a>
+        <th class="titleCart">
+          <a href="TaliBasket.html"><h1 id="basketCount">Basket: 0</h1></a>
         </th>
       </tr>
       <tr class="menu">
@@ -23,9 +23,6 @@
       </tr>
     </table>
     <table class="contentMenu" id="basketContent">
-      <!-- <tr>
-        <td><p id="itemName"></p><p id="itemCost"></p><p id="itemInBasket"></p></td>
-      </tr> -->
       <tr>
         <td style="border:none"></td>
         <td id="totalCost">Total: &pound0</td>
@@ -35,6 +32,6 @@
         <td><button id="buttonCheckout" onclick="Checkout()">Checkout</button></td>
       </tr>
     </table>
-    <p>DISCLAIMER - This is a university project, these products aren't actually available for sale.</p>
+    <p class="disclaimer">DISCLAIMER: This is a university project, these products aren't actually available for sale.</p>
   </body>
 </html>
